Add system's remaining endpoints